# ardan_grpc

./: Cargo.toml  build.rs
proto/: auth.proto  hello.proto  streaming.proto
src/: auth_client.rs  auth_server.rs  client.rs  server.rs
