[package]
name = "ardan_grpc"
version = "0.1.0"
edition = "2024"

[[bin]] # Bin to run the streaming gRPC server
name = "streaming-server"
path = "src/streaming_server.rs"

[[bin]] # Bin to run the streaming gRPC client
name = "streaming-client"
path = "src/streaming_client.rs"

[[bin]] # Bin to run the auth gRPC server
name = "auth-server"
path = "src/auth_server.rs"

[[bin]] # Bin to run the auth gRPC client
name = "auth-client"
path = "src/auth_client.rs"

[dependencies]
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
tonic-build = "0.10"
